crates/macros/tests/fail/byte-complete/field-not-fixed-layout.rs
use mem_markers::ByteComplete;

#[derive(ByteComplete)]
struct Foo {
    a: Other,
}

struct Other {}
fn main() {}
