crates/macros/tests/fail/byte-complete/field-not-fixed-layout.stderr
error[E0277]: the trait bound `Other: mem_markers::byte_complete::ByteComplete` is not satisfied
 --> $DIR/field-not-fixed-layout.rs:5:8
  |
3 | #[derive(ByteComplete)]
  |          ------------ required by this bound in `FooImplsByteComplete`
4 | struct Foo {
  |        ---
5 |     a: Other,
  |        ^^^^^ the trait `mem_markers::byte_complete::ByteComplete` is not implemented for `Other`
